package ar.edu.utn.frba.dds.impactoambiental.models.mediodetransporte;

public interface MedioDeTransporte {
  Double carbonoEquivalentePorKM();
  boolean esCompartible();
}
